# emrent

./: Cargo.toml  LICENSE  README.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
apps/desktop/: package-lock.json  package.json
apps/desktop/src/: App.tsx  main.tsx
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/assets/: Fedora-Budgie-Live-x86_64-44.torrent
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/desktop/src-tauri/src/commands/: mod.rs
apps/desktop/src-tauri/src/peer/: connection.rs  disk.rs  handshake.rs  listener.rs  manager.rs  messages.rs  mod.rs  pieces.rs  session.rs  upload.rs
apps/desktop/src-tauri/src/torrent/: info_hash.rs  metainfo.rs  mod.rs  peer_id.rs
apps/desktop/src-tauri/src/tracker/: announce.rs  client.rs  mod.rs  response.rs
crates/emrent/: Cargo.toml
crates/emrent-bencode/: Cargo.toml
crates/emrent-dht/: Cargo.toml
crates/emrent-metainfo/: Cargo.toml
crates/emrent-peer/: Cargo.toml
crates/emrent-pieces/: Cargo.toml
crates/emrent-tracker/: Cargo.toml
docs/: Challenges.md
