[workspace]

members = [
	"apps/desktop/src-tauri",
	"crates/emrent-bencode",
	"crates/emrent-metainfo",
	"crates/emrent-tracker",
	"crates/emrent-dht",
	"crates/emrent-peer",
	"crates/emrent-pieces",
]

resolver = "2"

license = "MIT OR Apache-2.0"

[patch.crates-io]
brotli = { path = "patches/brotli" }
